--- a/public/scss/base/_base.scss
+++ b/public/scss/base/_base.scss
@@ -17,6 +17,9 @@ button:focus, input:focus {
 	outline: 0 !important;
 }
 
+.btn {
+  cursor: pointer;
+}
 
 /***** example ******/
 
